--- a/index.html
+++ b/index.html
@@ -60,25 +60,25 @@
                         <p class="intro-text">Watch the destruction unfold in front of your eyes</p>
                     </div>
                     <div class="col-md-4">
-                        <a href="../visuals/disease_visual2000.html">2000</a> </br>
-                        <a href="../visuals/disease_visual2001.html">2001</a> </br>
-                        <a href="../visuals/disease_visual2002.html">2002</a> </br>
-                        <a href="../visuals/disease_visual2003.html">2003</a> </br>
-                        <a href="../visuals/disease_visual2004.html">2004</a> </br>
+                        <a href="visuals/disease_visual2000.html">2000</a> </br>
+                        <a href="visuals/disease_visual2001.html">2001</a> </br>
+                        <a href="visuals/disease_visual2002.html">2002</a> </br>
+                        <a href="visuals/disease_visual2003.html">2003</a> </br>
+                        <a href="visuals/disease_visual2004.html">2004</a> </br>
                     </div>
                     <div class="col-md-4">
-                        <a href="../visuals/disease_visual2005.html">2005</a> </br>
-                        <a href="../visuals/disease_visual2006.html">2006</a> </br>
-                        <a href="../visuals/disease_visual2007.html">2007</a> </br>
-                        <a href="../visuals/disease_visual2008.html">2008</a> </br>
-                        <a href="../visuals/disease_visual2009.html">2009</a> </br>
+                        <a href="visuals/disease_visual2005.html">2005</a> </br>
+                        <a href="visuals/disease_visual2006.html">2006</a> </br>
+                        <a href="visuals/disease_visual2007.html">2007</a> </br>
+                        <a href="visuals/disease_visual2008.html">2008</a> </br>
+                        <a href="visuals/disease_visual2009.html">2009</a> </br>
                     </div>
                     <div class="col-md-4">
-                        <a href="../visuals/disease_visual2010.html">2010</a> </br>
-                        <a href="../visuals/disease_visual2011.html">2011</a> </br>
-                        <a href="../visuals/disease_visual2012.html">2012</a> </br>
-                        <a href="../visuals/disease_visual2013.html">2013</a> </br>
-                        <a href="../visuals/disease_visual2014.html">2014</a> </br>
+                        <a href="visuals/disease_visual2010.html">2010</a> </br>
+                        <a href="visuals/disease_visual2011.html">2011</a> </br>
+                        <a href="visuals/disease_visual2012.html">2012</a> </br>
+                        <a href="visuals/disease_visual2013.html">2013</a> </br>
+                        <a href="visuals/disease_visual2014.html">2014</a> </br>
                     </div>
                     
                 </div>
