--- a/visuals/disease_visual2010.html
+++ b/visuals/disease_visual2010.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Bokeh Plot</title>
+        <title>2010</title>
         
 <style>
     /* BEGIN C:\Users\Patel\Anaconda3\lib\site-packages\bokeh\server\static\css/bokeh.min.css */
@@ -215,6 +215,11 @@
 </script>
     </head>
     <body>
+        <center><h1 style = "font-family:Georgia,serif;
+		color:#4E443C;
+		font-variant: small-caps; text-transform: none; font-weight: 100; margin-bottom: 0;"> 2010 Infectious Disease Prevalence </h1></center>
+		
+
         <div class="plotdiv" id="7fa3a1b3-2a92-4d8a-bb28-426014580f16"></div>
         <script type="text/javascript">
             Bokeh.$(function() {
