--- a/visuals/disease_visual2012.html
+++ b/visuals/disease_visual2012.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Bokeh Plot</title>
+        <title>2012</title>
         
 <style>
     /* BEGIN C:\Users\Patel\Anaconda3\lib\site-packages\bokeh\server\static\css/bokeh.min.css */
@@ -215,6 +215,10 @@
 </script>
     </head>
     <body>
+        <center><h1 style = "font-family:Georgia,serif;
+		color:#4E443C;
+		font-variant: small-caps; text-transform: none; font-weight: 100; margin-bottom: 0;"> 2012 Infectious Disease Prevalence </h1></center>
+
         <div class="plotdiv" id="2bf26a00-b1e7-4ca0-a50c-65dca33be188"></div>
         <script type="text/javascript">
             Bokeh.$(function() {
